distance_matrix_tests.cc updated for bellman-ford

--- a/tests/graph/BUILD
+++ b/tests/graph/BUILD
@@ -1,5 +1,5 @@
 cc_test(
-    name = "distance_matrix_test",
+    name = "distance_matrix_tests",
     srcs = ["distance_matrix_tests.cc"],
     deps = [
         "//src:graph_distance_matrix_lib",
