weird algo from DSA class dated 11/18/2023

--- a/src/BUILD
+++ b/src/BUILD
@@ -34,3 +34,9 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = ["utility"],
 )
+
+cc_library(
+    name = "weirdalgo",
+    hdrs = ["weird_algo.h"],
+    visibility = ["//visibility:public"],
+)
