--- a/tests/BUILD
+++ b/tests/BUILD
@@ -26,3 +26,12 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+cc_test(
+    name = "weirdalgo_tests",
+    srcs = ["weirdalgo_tests.cc"],
+    deps = [
+        "//src:weirdalgo",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
