missing number using xor and hashset approach for 1,2,3,k missing numbers

--- a/src/BUILD
+++ b/src/BUILD
@@ -40,3 +40,9 @@ cc_library(
     hdrs = ["weird_algo.h"],
     visibility = ["//visibility:public"],
 )
+
+cc_library(
+    name = "missingnum",
+    hdrs = ["missingnumber.h"],
+    visibility = ["//visibility:public"],
+)
