lc1004_max_consecutive_ones_iii using sliding window approach

--- a/src/arrays_and_strings/BUILD
+++ b/src/arrays_and_strings/BUILD
@@ -1,6 +1,7 @@
 cc_library(
     name = "arrays_and_stringslib",
-    srcs = ["num_matching_subsequence.cc"],
+    srcs = ["num_matching_subsequence.cc",
+    "lc1004_max_consecutive_ones_iii.cc"],
     hdrs = ["mystrings.h"],
     visibility = ["//visibility:public"],
 )
