--- a/src/arrays_and_strings/BUILD
+++ b/src/arrays_and_strings/BUILD
@@ -2,7 +2,8 @@ cc_library(
     name = "arrays_and_stringslib",
     srcs = ["num_matching_subsequence.cc",
     "lc1004_max_consecutive_ones_iii.cc",
-    "lc643_maximum_average_subarray_1.cc"],
+    "lc643_maximum_average_subarray_1.cc",
+    "findMiddleIndex.cc"],
     hdrs = ["mystrings.h"],
     visibility = ["//visibility:public"],
 )
