more problmes on prefix sum as part of arrays practice

--- a/src/arrays_and_strings/BUILD
+++ b/src/arrays_and_strings/BUILD
@@ -3,7 +3,9 @@ cc_library(
     srcs = ["num_matching_subsequence.cc",
     "lc1004_max_consecutive_ones_iii.cc",
     "lc643_maximum_average_subarray_1.cc",
-    "findMiddleIndex.cc"],
+    "findMiddleIndex.cc",
+    "codeforces_cont327_flippinggame.cc",
+    "waysToSplitArray.cc"],
     hdrs = ["mystrings.h"],
     visibility = ["//visibility:public"],
 )
