tree-based pseudo lru mimicked using combination of bit-vector, unordered_set (hash) and array

--- a/src/comparchfuncmodel/BUILD
+++ b/src/comparchfuncmodel/BUILD
@@ -1,6 +1,7 @@
 cc_library(
     name = "comparchfuncmodel_lib",
     srcs = ["lrucache.cc",
+    "tplru.cc"
     ],
     hdrs = ["lrucache.h"],
     visibility = ["//visibility:public"],
