lc1524_numer_of_sub-arrays_with_odd_sum

--- a/src/arrays_and_strings/BUILD
+++ b/src/arrays_and_strings/BUILD
@@ -6,7 +6,8 @@ cc_library(
     "findMiddleIndex.cc",
     "codeforces_cont327_flippinggame.cc",
     "waysToSplitArray.cc",
-    "lc238_product_of_array_except_self.cc"],
+    "lc238_product_of_array_except_self.cc",
+    "lc1524_number_of_sub-array_with_odd_sum.cc"],
     hdrs = ["mystrings.h"],
     visibility = ["//visibility:public"],
 )
