solution to more hashing problems and unsigned multiplication code from RISC-V retaining MSB's only

--- a/src/hashing/BUILD
+++ b/src/hashing/BUILD
@@ -1,7 +1,14 @@
 cc_library(
     name = "hashinglib",
     srcs = ["findWinners.cc",
-    "maximumSum.cc"],
+    "maximumSum.cc",
+    "canConstruct.cc",
+    "isPathCrossing.cc",
+    "findLucky.cc",
+    "frequencySort.cc",
+    "lc930_binary_subarrays_with_sum.cc",
+    "lc1695_maximum_erasure_value.cc",
+    "lc567_permutation_in_string.cc"],
     hdrs = ["myhash.h"],
     visibility = ["//visibility:public"],
 )
