--- a/src/comparchfuncmodel/BUILD
+++ b/src/comparchfuncmodel/BUILD
@@ -1,8 +1,10 @@
 cc_library(
     name = "comparchfuncmodel_lib",
     srcs = ["lrucache.cc",
-    "tplru.cc"
+    "tplru.cc",
+    "mulhu.cc"
     ],
-    hdrs = ["lrucache.h"],
+    hdrs = ["lrucache.h",
+    "arith.h"],
     visibility = ["//visibility:public"],
 )
