accumulating all problems involving bit manipulation to same directory

--- a/src/bit_twiddling/BUILD
+++ b/src/bit_twiddling/BUILD
@@ -1,7 +1,7 @@
 cc_library(
     name = "bit_twiddling_lib",
     srcs = ["min_max.cc",
-    ],
+    "missingnumber.cc"],
     hdrs = ["bit_twiddling.h"],
     visibility = ["//visibility:public"],
 )
